--- a/donate.html
+++ b/donate.html
@@ -95,7 +95,7 @@
             <h3>Make a Donation</h3>
             <p>If you are in Brazil, you can make a donation via PIX:</p>
             <img src="./pix.png" alt="PIX QR Code" style="display: block; margin: 0 auto;">
-            <p>Pix Key: 50c91b2c-509d-45af-ac47-2018e4b6c988</p>
+            <p><strong>Pix Key:</strong> 50c91b2c-509d-45af-ac47-2018e4b6c988</p>
             <p>If you are from another country, you can contribute by donating Tibia Coins:</p>
             <a href="link-to-tibia-coin-donation-page" target="_blank" class="donate-button">Donate Tibia Coins</a>
         </div>
