--- a/tutorial.html
+++ b/tutorial.html
@@ -5,6 +5,12 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
     <style>
+        @media (max-width: 600px) {
+            a {
+                padding: 15px 30px;
+                font-size: 1.2em;
+            }
+        }
         body {
                 font-family: 'Roboto', sans-serif;
                 color: #333;
@@ -95,6 +101,11 @@
             margin: auto;
             text-align: center;
         }
+        img {
+            max-width: 100%;
+            height: auto;
+        }
+
 
     </style>
 </head>
