--- a/tutorial.html
+++ b/tutorial.html
@@ -136,6 +136,11 @@
         <p>With OBS open and Tibia mirrored, log in to your account and access your character. The next steps are: first, put the Tibia mirroring done by OBS in full screen and open Tibia over the OBS screen. Then, click on AssistBOT and press the button to activate the opacity. You will notice that the window of your Tibia became "invisible" and you can only control it through the mirroring of OBS.</p>
         <p><em><img src="./opacity.gif" alt="activating opacity" style="width: 60rem;"></em></p>
 
+        <h2>Step 5: Capture RGB and Icon Position</h2>
+        <p>To capture the position and RGB, it is essential to have the opacity activated. After clicking the position button, you will need to point your mouse to the exact position of your might ring, SSA, mana, HP, etc. Then, click "OK" and select your hotkey. The mana and HP work in the same way. You will click on position, place the mouse over from when you want to heal your mana and HP, select your hotkey, and click start. It's worth noting that since it works by RGB or SSA, you don't necessarily need the status bar. Another observation is that if you hover the mouse over the bar or the SSA/might ring, it will trigger the hotkey because there was a change in the RGB, and that's what makes our software different, as it doesn't inject anything into Tibia, making it as safe as possible against bans.</p>
+        <p><em><img src="./manahp.gif" alt="activating opacity" style="width: 60rem;"></em></p>
+        <p><em><img src="./ssa.gif" alt="activating opacity" style="width: 60rem;"></em></p>
+
         <p>After these steps, just configure your AssistBOT, click start, save your settings, and enjoy the game.</p>
 
         <p>If you have any questions, feel free to join our official Discord. We will be there to help whenever possible.</p>
