--- a/tutorial.html
+++ b/tutorial.html
@@ -133,8 +133,13 @@
         <p><em><img src="./obs.gif" alt="configuring obs" style="width: 60rem;"></em></p>
 
         <h2>Step 4: Activate Opacity</h2>
-        <p>With OBS open and Tibia mirrored, log in to your account and access your character. The next steps are: first, put the Tibia mirroring done by OBS in full screen and open Tibia over the OBS screen. Then, click on AssistBOT and press the button to activate the opacity. You will notice that the window of your Tibia became "invisible" and you can only control it through the mirroring of OBS. You should use the hotkeys described in the program for skills, auto-hunt, utamo, utura, and food. Assigning the correct hotkeys for these actions will enable AssistBOT to perform the desired tasks effectively within the game.</p>
+        <p>With OBS open and Tibia mirrored, log in to your account and access your character. The next steps are: first, put the Tibia mirroring done by OBS in full screen and open Tibia over the OBS screen. Then, click on AssistBOT and press the button to activate the opacity. You will notice that the window of your Tibia became "invisible" and you can only control it through the mirroring of OBS.</p>
         <p><em><img src="./opacity.gif" alt="activating opacity" style="width: 60rem;"></em></p>
+
+        <h2>Step 6: Using Hotkeys for Skills</h2>
+        <p>After capturing the position and RGB, you should use the hotkeys described in the program for skills, auto-hunt, utamo, utura, and food. Assigning the correct hotkeys for these actions will enable AssistBOT to perform the desired tasks effectively within the game. You should use the hotkeys described in the program for skills, auto-hunt, utamo, utura, and food. Assigning the correct hotkeys for these actions will enable AssistBOT to perform the desired tasks effectively within the game.</p>
+        <p><em><img src="./ssa.gif" alt="activating opacity" style="width: 60rem;"></em></p>
+        <p><em><img src="./manahp.gif" alt="activating opacity" style="width: 60rem;"></em></p>
 
         <p>After these steps, just configure your AssistBOT, click start, save your settings, and enjoy the game.</p>
 
