--- a/donate.html
+++ b/donate.html
@@ -87,7 +87,7 @@
         </div>
     </div>
     <div class="container">
-        <h2>Why do we ask for donations?</h2>
+        <h1>Why donate?</h1>
         <p>AssistBOT is a free software and is constantly being developed. To ensure that we can continue to improve and maintain the software accessible to everyone, we rely on the collaboration of the community. Your donation is essential to help us cover the costs of development, maintenance, and hosting, as well as to encourage community engagement in the project.</p>
         <p>As a project that values equity and accessibility, we believe that community collaboration is essential for the ongoing success of AssistBOT. Your contribution allows us to dedicate more resources to improving the software, ensuring that it remains free and accessible to all players.</p>
         <p>Regardless of the amount, your donation is greatly appreciated and directly contributes to the advancement of AssistBOT and the promotion of a more inclusive and equitable gaming experience for everyone. We sincerely appreciate your support!</p>
