--- a/tutorial.html
+++ b/tutorial.html
@@ -53,6 +53,7 @@
             background-color: #f0f0f0;
             box-sizing: border-box;
             margin-top: 90px;
+            margin-bottom: 30px;
         }
         h2 {
             font-size: 1em;
