--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
             background-color: #f0f0f0;
             box-sizing: border-box;
             margin-bottom: 3rem;
-            border-radius: 7px;
+            border-radius: 30px;
         }
         .container1 {
             margin-bottom: 2rem;
@@ -69,7 +69,7 @@
             margin-top: 20px;
             padding: 10px;
         }
-        strong {
+                strong {
             font-size: 1.3em;
             padding: 3px;
             color: #ff0000;
@@ -118,7 +118,7 @@
             <p>Embora não seja permitido pela CipSoft, desenvolvemos esse bot de forma que seja difícil de detectar. Utilizamos técnicas de reconhecimento de imagem e cor, sem injetar nada no jogo. Isso permite que o AssistBOT opere discretamente, minimizando o risco de detecção. No entanto, é importante lembrar que o uso de qualquer software de automação pode violar os termos de serviço do jogo e pode resultar em penalidades se detectado.</p>
             <p>Junte-se a nós na jornada para tornar os jogos mais acessíveis e divertidos para todos.</p>
             <div class="download-section">
-                <a href="./AssistBOT.rar" download>Download da versão beta do AssistBOT</a>
+                <a href="./assistbot-installer.exe" download>Download da versão beta do AssistBOT</a>
             </div>
         </div>
 
@@ -138,7 +138,7 @@
             <p><em><img src="./opacity.gif" alt="ativando opacidade" style="width: 60rem;"></em></p>
 
             <h2>Capturando Posições e Configurando Teclas de Atalho</h2> 
-            <p>Para capturar a posição e RGB, certifique-se de que a opacidade está ativada. Clique no botão de posição e posicione o mouse sobre a cor do seu colar SSA e anel might. Pressione a tecla "Insert" para capturar, em seguida, clique em "OK" e selecione sua tecla de atalho. A cura e o uso automático de SSA/anel might funcionam da mesma maneira. Clique em posição, coloque o mouse sobre a cor onde você deseja curar o mana e HP, pressione a tecla "Insert", selecione sua tecla de atalho e clique em "Iniciar".</p> 
+            <p>Para capturar a posição e RGB, certifique-se de que a opacidade está ativada. Clique no botão de posição e posicione o mouse sobre a cor do seu colar SSA e might ring. Pressione a tecla "Insert" para capturar, em seguida, clique em "OK" e selecione sua tecla de atalho. A cura e o uso automático de SSA/might ring funcionam da mesma maneira. Clique em posição, coloque o mouse sobre a cor onde você deseja curar o mana e HP, pressione a tecla "Insert", selecione sua tecla de atalho e clique em "Iniciar".</p> 
             <p><em><img src="./manahp.gif" alt="posição de mana e hp" style="width: 60rem;"></em></p>
             <p><em><img src="./ssa.gif" alt="posição de ssa" style="width: 60rem;"></em></p>
 
