push installer to site

--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
 
         <div class="container">
             <h1>Como Usar?</h1>
-            <strong>Atenção: É essencial abrir o AssistBOT com permissão de administrador.</strong>
+            <strong>Atenção: É essencial abrir o AssistBOT com permissão de administrador e desativar qualquer antivirus/windowsdefender do seu computador.</strong>
 
             <h2>Passo 1: Baixar o OBS</h2>
             <p>Primeiro, você precisa baixar o OBS (Open Broadcaster Software) diretamente do site oficial. Recomendamos que você baixe a versão mais recente para garantir um desempenho otimizado e seguro. Após baixar o software, siga as instruções na tela para instalar o OBS no seu computador.</p>
@@ -138,6 +138,8 @@
             <p><em><img src="./opacity.gif" alt="ativando opacidade" style="width: 60rem;"></em></p>
 
             <h2>Capturando Posições e Configurando Teclas de Atalho</h2> 
+            <strong>Obrigatoriamente você deve costumizar sua interface para que a barra de vida, set e store fiquem dessa forma (caso contrario o bot não irá funcionar).</strong>
+            <p><em><img src="./interface.png" alt="interface" style="width: 30rem;"></em></p>
             <p>Para capturar a posição e RGB, certifique-se de que a opacidade está ativada. Clique no botão de posição e posicione o mouse sobre a cor do seu colar SSA e might ring. Pressione a tecla "Insert" para capturar, em seguida, clique em "OK" e selecione sua tecla de atalho. A cura e o uso automático de SSA/might ring funcionam da mesma maneira. Clique em posição, coloque o mouse sobre a cor onde você deseja curar o mana e HP, pressione a tecla "Insert", selecione sua tecla de atalho e clique em "Iniciar".</p> 
             <p><em><img src="./manahp.gif" alt="posição de mana e hp" style="width: 60rem;"></em></p>
             <p><em><img src="./ssa.gif" alt="posição de ssa" style="width: 60rem;"></em></p>
