--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
             <p>Embora não seja permitido pela CipSoft, desenvolvemos esse bot de forma que seja difícil de detectar. Utilizamos técnicas de reconhecimento de imagem e cor, sem injetar nada no jogo. Isso permite que o AssistBOT opere discretamente, minimizando o risco de detecção. No entanto, é importante lembrar que o uso de qualquer software de automação pode violar os termos de serviço do jogo e pode resultar em penalidades se detectado.</p>
             <p>Junte-se a nós na jornada para tornar os jogos mais acessíveis e divertidos para todos.</p>
             <div class="download-section">
-                <a href="./AssistBOT.rar" style="font-size: 1.3rem">Download</a>
+                <a href="./AssistBOT-beta.rar" style="font-size: 1.3rem">Download</a>
             </div>
         </div>
 
