--- a/index.html
+++ b/index.html
@@ -66,9 +66,11 @@
             color: #444;
         }
         .download-section {
-            margin-top: 20px;
-            padding: 10px;
+            display: flex;
+            justify-content: center;
+            gap: 20px;
         }
+
                 strong {
             font-size: 1.3em;
             padding: 3px;
@@ -114,17 +116,16 @@
         </div>
         <div class="container">
             <h1>Bem-vindo ao AssistBOT</h1>
-            <p>O AssistBOT é um software gratuito, criado com o objetivo de nivelar o campo de jogo para todos os jogadores.</p>
             <p>Embora não seja permitido pela CipSoft, desenvolvemos esse bot de forma que seja difícil de detectar. Utilizamos técnicas de reconhecimento de imagem e cor, sem injetar nada no jogo. Isso permite que o AssistBOT opere discretamente, minimizando o risco de detecção. No entanto, é importante lembrar que o uso de qualquer software de automação pode violar os termos de serviço do jogo e pode resultar em penalidades se detectado.</p>
             <p>Junte-se a nós na jornada para tornar os jogos mais acessíveis e divertidos para todos.</p>
             <div class="download-section">
-                <a href="./AssistBOT-beta.exe" style="font-size: 1.3rem">Download</a>
+                <a href="https://drive.google.com/uc?export=download&id=1_qCjmtarYAmwLlB2BuKUQaGnqY1QfcNF" target="_blank" style="font-size: 1.3rem">Download AssistBOT + OBS 26.1.1</a>
             </div>
         </div>
 
         <div class="container">
             <h1>Como Usar?</h1>
-            <strong>Atenção: É essencial abrir o AssistBOT com permissão de administrador e desativar qualquer antivirus/windowsdefender do seu computador.</strong>
+            <strong>Atenção: É essencial abrir o AssistBOT e o OBS com permissão de administrador e desativar qualquer antivirus/windowsdefender do seu computador.</strong>
 
             <h2>Passo 1: Baixar o OBS</h2>
             <p>Primeiro, você precisa baixar o OBS (Open Broadcaster Software) diretamente do site oficial. Recomendamos que você baixe a versão mais recente para garantir um desempenho otimizado e seguro. Após baixar o software, siga as instruções na tela para instalar o OBS no seu computador.</p>
