--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
         }
         .container {
             width: 90%;
+            padding: 20rem;
             margin: auto;
             box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px, rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
             padding: 20px;
